kubernetes/clusters/cluster-104/observer/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observer
  labels:
    app.kubernetes.io/part-of: cluster-104
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
