kubernetes/clusters/cluster-104/observer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus-observer
  namespace: observer
  labels:
    app.kubernetes.io/name: gatus-observer
    app.kubernetes.io/part-of: cluster-104
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app.kubernetes.io/name: gatus-observer
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
